# eiquadprog

./: .git-blame-ignore-revs  .gitlab-ci.yml  .mergify.yml  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  flake.nix  package.xml
.github/workflows/: ci-linux-ros.yml
include/: eiquadprog-fast.hpp  eiquadprog.hpp
include/eiquadprog/: CMakeLists.txt  eiquadprog-fast.hpp  eiquadprog-fast.hxx  eiquadprog-rt.hpp  eiquadprog-rt.hxx  eiquadprog-utils.hxx  eiquadprog.hpp
src/: eiquadprog-fast.cpp  eiquadprog.cpp
tests/: CMakeLists.txt  TestA.cpp  TestA.hpp  TestB.cpp  TestB.hpp  eiquadprog-basic.cpp  eiquadprog-both.cpp  eiquadprog-fast.cpp  eiquadprog-rt.cpp  test-integration.cpp
unittest/: CMakeLists.txt  eiquadprog-basic.cpp  eiquadprog-fast.cpp  eiquadprog-rt.cpp
