<package format="2">
  <name>eiquadprog</name>
  <version>1.2.1</version>
  <description>
    Eiquadprog a QP solver using active sets
  </description>
  <maintainer email="ostasse@laas.fr">Olivier Stasse</maintainer>
  <license>LGPLv3</license>

  <url>git@github.com:stack-of-tasks/eiquadprog.git</url>
  <author>Gabriele Buondonno</author>
  <author>Andrea Del Prete</author>
  <author>Luca Di Gaspero</author>
  <author>Angelo Furfaro</author>
  <author>Benjamin Stephens</author>
  <author>Gael Guennebaud</author>

  <build_depend>roscpp</build_depend>

  <exec_depend>roscpp</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <doc_depend>doxygen</doc_depend>

</package>
