
#test paths and names (without .cpp extension)
SET (TESTS
  eiquadprog-basic
  )

# --- MACROS ------------------------------------------------------------------

MACRO(ADD_TEST_CFLAGS target flag)
  SET_PROPERTY(TARGET ${target} APPEND_STRING PROPERTY COMPILE_FLAGS " ${flag}")
ENDMACRO(ADD_TEST_CFLAGS)

MACRO(ADD_EIQUADPROG_UNIT_TEST NAME)
  SET(TEST_NAME "${NAME}-test")
  ADD_UNIT_TEST(${TEST_NAME} ${NAME}.cpp)
  SET_TARGET_PROPERTIES(${TEST_NAME} PROPERTIES LINKER_LANGUAGE CXX)
  TARGET_INCLUDE_DIRECTORIES(${TEST_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

  ADD_TEST_CFLAGS(${TEST_NAME} "-DBOOST_TEST_DYN_LINK") 
  SET(MODULE_NAME "${NAME}Test")
  STRING(REGEX REPLACE "-" "_" MODULE_NAME ${MODULE_NAME})
  ADD_TEST_CFLAGS(${TEST_NAME} "-DBOOST_TEST_MODULE=${MODULE_NAME}") 

  PKG_CONFIG_USE_DEPENDENCY(${TEST_NAME} eigen3)

#  TARGET_LINK_LIBRARIES(${TEST_NAME} ${PROJECT_NAME})
  TARGET_LINK_LIBRARIES(${TEST_NAME} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
ENDMACRO(ADD_EIQUADPROG_UNIT_TEST)

FOREACH(TEST ${TESTS})
  ADD_EIQUADPROG_UNIT_TEST(${TEST})
ENDFOREACH(TEST)
